Version 0.9.7

November, 2010
  First release of the Qt4 port.

May, 2010
  Started porting RELACS to Qt4 for improved performance.

Version 0.9.6

May, 2010
  Last release of the Qt3 based version.
  Many new plugins for investigating electrosensory systems.

February, 2010
  First successful application of the dynamic-clamp in a
  real patch-clamp recording. Thank you, Clemens!

July, 2009
  Introduced DigitalIO device interface and 
  got attenuator back into RELACS.

March, 2009
  First working version of the dynamic clamp modules
  thanks to Marco.

December, 2008
  Working interface to the comedi library supporting many
  data acquisition boards.

June 14, 2008
  Full autotools support in the subversion repository.
  That is, relacs should compile smoothly on your
  system provided running ./configure was successfull.
  
Mar 1, 2008
  The new web site goes online.

Version 0.9.0 - prerelease 

Aug 22, 2007
  Note that names of libraries and classes as well as class interfaces
  may still change. Also, no hardware support is shipped with this
  release. Use this release as a demo only and don't put any work into
  it. Wait for the first official release (we are working hard on
  this, but don't expect the official release available before spring
  2008).

  