@@ -156,7 +156,7 @@ RELACS_PLUGINSET([acoustic],[acoustic])
 RELACS_PLUGINSET([auditory],[auditory],[ephys acoustic])
 RELACS_PLUGINSET([auditoryprojects],[auditoryprojects],[ephys acoustic auditory])
 RELACS_PLUGINSET([patchclamp],[patchclamp],[ephys])
-RELACS_PLUGINSET([patchclampprojects],[patchclampprojects],[ephys])
+RELACS_NOPLUGINSET([patchclampprojects],[patchclampprojects],[ephys])
 RELACS_PLUGINSET([efield],[efield],[base])
 RELACS_PLUGINSET([efish],[efish],[base ephys efield])
 RELACS_NOPLUGINSET([multielectrode],[multielectrode],[ephys])
