@@ -123,7 +123,7 @@
 
 *Event Detector: Spikes-1
          minthresh: 12.0mV
-         threshold: 39.9mV
+         threshold: 40.0mV
              ratio: 40%
           maxwidth: 2.5ms
            testisi: false
@@ -368,7 +368,7 @@
 *RePro: SingleStimulus
   ----- Waveform -------------------------------------------------------
             type: AM|Wave|Envelope|AM
-        waveform: Triangular|From file|Const|Sine|Rectangular|Triangular|Sawup|Sawdown|Whitenoise|OUnoise
+        waveform: OUnoise|From file|Const|Sine|Rectangular|Triangular|Sawup|Sawdown|Whitenoise|OUnoise
         stimfile: stimuli/songs/bigone.dat
         stimampl: 0.3
        amplitude: 6dB
