@@ -64,7 +64,7 @@
   outputtracemodality: electric|electric|voltage|current
 
 *Macros
-              file: macros.cfg|macrosam.cfg|macrosdc.cfg
+              file: macrosam.cfg|macros.cfg|macrosdc.cfg
           mainfile: macros.cfg
   fallbackonreload: true
 
