@@ -110,7 +110,7 @@
 
 *Event Detector: Spikes-1
     minthresh: 27.5mV
-    threshold: 27.5mV
+    threshold: 29.6mV
   trendthresh: 5%
 
 *Event Detector: EOD
@@ -124,8 +124,8 @@
   threshold: 1.4mV
 
 *Event Detector: LocalBeat-1
-  threshold: 0.050mV
-  minthresh: 0.050mV
+  threshold: 0.020mV
+  minthresh: 0.020mV
       ratio: 35%
 
 *Event Detector: GlobalEFieldStimulus
