@@ -174,7 +174,7 @@
   ----- Timing ---------------------------------------------------------
        duration: 500ms
           delay: 100ms
-          pause: 500ms
+          pause: 2000ms
        ishuffle: Up|Up|Down|AlternateInUp|AlternateInDown|AlternateOutUp|AlternateOutDown|Random|PseudoRandom
         shuffle: Random|Up|Down|AlternateInUp|AlternateInDown|AlternateOutUp|AlternateOutDown|Random|PseudoRandom
      iincrement: -1
