@@ -23,7 +23,7 @@
     origin: before end of data|before end of data|before signal|after signal
     offset: 0ms
   duration: 1000ms
-      size: 8192|64|128|256|512|1024|2048|4096|8192|16384|32768|65536|131072|262144|524288|1048576
+      size: 1024|64|128|256|512|1024|2048|4096|8192|16384|32768|65536|131072|262144|524288|1048576
    overlap: true
     window: Hanning|Bartlett|Blackman|Blackman-Harris|Hamming|Hanning|Parzen|Square|Welch
       fmax: 500Hz
@@ -124,15 +124,7 @@
 
 *Event Detector: Spikes-1
          minthresh: 20.0mV
-<<<<<<< .mine
-<<<<<<< .mine
          threshold: 41.4mV
-=======
-         threshold: 39.6mV
-=======
-         threshold: 38.8mV
->>>>>>> .r733
->>>>>>> .r716
   considerstimulus: true
                log: true
        trendthresh: 20%
@@ -169,14 +161,6 @@
          window: Hanning|Bartlett|Blackman|Blackman-Harris|Hamming|Hanning|Parzen|Square|Welch
      plotstdevs: true
   plotcoherence: true
-     project: 
-  experiment: 
-
-*RePro: Wait
-  absdate: false
-     date: 
-     days: 0days
-     time: 00:00:00
      project: 
   experiment: 
 
@@ -218,6 +202,33 @@
      project: 
   experiment: 
 
+*RePro: AdaptedFICurves
+  ----- Stimulus -------------------------------------------------------
+  Adaptation stimulus
+      adaptbase: SPL|SPL|Threshold
+       adaptint: 50dB SPL
+      adaptinit: 1000ms
+  adaptduration: 100ms
+  Test stimuli
+        intbase: SPL|SPL|Threshold|Adaptation stimulus
+         intmin: 50dB
+         intmax: 100dB
+        intstep: 10dB SPL
+       duration: 100ms
+  ----- General --------------------------------------------------------
+           side: left|left|right|best
+    carrierfreq: 0kHz
+    usebestfreq: true
+           ramp: 1ms
+          pause: 1000ms
+          delay: 100ms
+    repetitions: 10
+  Analysis
+      onsettime: 100ms
+         sstime: 100ms
+     project: 
+  experiment: 
+
 *RePro: FICurve
   ----- Intensities ----------------------------------------------------
               intmin: 0dB SPL
@@ -242,9 +253,11 @@
                 side: best|left|right|best
   ----- Optimization ---------------------------------------------------
   Baseline activity
+           usesilent: false
+         maxbaserate: 10Hz
            maxsilent: 30
-        silentfactor: 3
          resetsilent: Session|Never|Session|RePro
+        silentfactor: 3
   No response
            skippause: true
   silentintincrement: 100
@@ -294,9 +307,11 @@
                   side: best|left|right|best
   ----- Optimization ---------------------------------------------------
   Baseline activity
+             usesilent: false
+           maxbaserate: 10Hz
              maxsilent: 30
-          silentfactor: 2
            resetsilent: Session|Never|Session|RePro
+          silentfactor: 2
   No response
              skippause: true
     silentintincrement: 100
