@@ -1,5 +1,8 @@
 Version 0.9.7
 
+March, 2011
+  Full odML metadata support.
+
 November, 2010
   First release of the Qt4 port.
 
